@@ -1,10 +1,19 @@
 buildscript {
     repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         jcenter()
     }
     
     dependencies {
-        classpath "cz.kubacki.gradle.plugins:gradle-nbm-plugin:1.9.0"
+        classpath ("cz.kubacki.gradle.plugins:gradle-nbm-plugin:1.17.0") {
+            // Workaround for bad transitive dependencies
+            exclude group:'org.slf4j', module:'slf4j-simple'
+            exclude group:'org.gradle', module:'gradle-tooling-api' // was version 2.7 
+
+        }
+        classpath "gradle.plugin.com.github.spotbugs:gradlePlugin:1.4"
         gradleApi()
     }
 }
@@ -13,7 +22,7 @@ apply plugin: 'build-dashboard'
 
 subprojects {
     apply plugin: 'java'
-    apply plugin: 'findbugs'
+    apply plugin: 'com.github.spotbugs'
     apply plugin: 'jacoco'
     apply plugin: 'eclipse'
     
@@ -31,26 +40,37 @@ subprojects {
         manifest.attributes provider: 'gradle'
     }
 
-    compileJava {
+    tasks.withType(JavaCompile) {
         options.compilerArgs << "-Xlint:all"
         options.compilerArgs << "-Werror"
-    } 
-
-    findbugs {
-        ignoreFailures = false
+        options.compilerArgs << "-proc:none"
     }
     
-    tasks.withType(FindBugs) {
+    spotbugs {
+         ignoreFailures = false
+    }
+
+    tasks.withType(com.github.spotbugs.SpotBugsTask) {
+        
+        // Workaround to bug https://github.com/spotbugs/spotbugs/issues/440
+        def sourceSetName = (name - 'spotbugs').uncapitalize()
+        dependsOn( sourceSets[sourceSetName].classesTaskName)
+            
         reports {
             xml.enabled = false
             html.enabled = true
         }
     }
+    
+    tasks.withType(JavaExec) {
+        jvmArgs "-XX:+IgnoreUnrecognizedVMOptions"
+        jvmArgs "--add-modules", "java.xml.bind"
+    }
 }
 
 project (":TweetWallFX-Configuration") {
     dependencies {
-        compile group: "log4j", name: "log4j", version: "1.2.17"
+        compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.9.0'
     }
 }
 
@@ -61,9 +81,8 @@ project(":TweetWallFX-Tweet-API") {
 
 project(":TweetWallFX-Tweet-Impl-Twitter4J") {
     dependencies {
-        compile group: "org.twitter4j", name: "twitter4j-core", version: "4.0.3"
-        compile group: "org.twitter4j", name: "twitter4j-stream", version: "4.0.3"
-        compile group: "log4j", name: "log4j", version: "1.2.17"
+        compile group: "org.twitter4j", name: "twitter4j-core", version: "4.0.6"
+        compile group: "org.twitter4j", name: "twitter4j-stream", version: "4.0.6"
         compile project(':TweetWallFX-Tweet-API')
         compile project(':TweetWallFX-Tweet-Impl-Twitter4J-OAuth')
         compile project(':TweetWallFX-Configuration')
@@ -72,8 +91,7 @@ project(":TweetWallFX-Tweet-Impl-Twitter4J") {
 
 project(":TweetWallFX-Core"){
     dependencies {
-        compile group: "de.jensd", name: "fontawesomefx", version: "8.3"
-        compile group: "log4j", name: "log4j", version: "1.2.17"
+        compile group: "de.jensd", name: "fontawesomefx", version: "8.9"
         compile group: "com.vdurmont", name: "emoji-java", version: "3.1.3"
         compile project(':TweetWallFX-Tweet-API')
         compile project(':TweetWallFX-Configuration')
@@ -96,7 +114,10 @@ project(":TweetWallFX-3D"){
 
 project(":TweetWallFX-Controls"){
     dependencies {
-        compile project(':TweetWallFX-Core')
+         compile group: "javax.cache", name: "cache-api", version: "1.0.0"
+         compile group: "org.ehcache", name: "ehcache", version: "3.3.0"
+         runtime group: "org.apache.logging.log4j", name: "log4j-slf4j-impl", version: "2.9.0"
+         compile project(':TweetWallFX-Core')
     }
 }
 
@@ -158,6 +179,25 @@ project(":TweetWallFX-Devoxx-2016"){
 }
 
 project(":TweetWallFX-Devoxx-2017-US") {
+    apply plugin: "application"
+    mainClassName = "org.tweetwallfx.generic.Main"
+
+    tasks.withType(JavaExec) {
+        main mainClassName
+    }
+
+    task('debug', dependsOn: 'classes', type: JavaExec) {
+        classpath sourceSets.main.runtimeClasspath
+        debug = true
+    }
+
+    dependencies {
+        compile project(':TweetWallFX-Generic2D')
+        compile project(':TweetWallFX-Tweet-Impl-Twitter4J')
+    }
+}
+
+project(":TweetWallFX-Devoxx-2017-FR") {
     apply plugin: "application"
     mainClassName = "org.tweetwallfx.generic.Main"
 
@@ -284,5 +324,6 @@ task createFolders(description: 'Creates the source folders if they do not exist
 task ('runDevoxx', dependsOn: ':TweetWallFX-Devoxx:run')
 task ('runDevoxx2015', dependsOn: ':TweetWallFX-Devoxx-2015:run')
 task ('runDevoxx2017US', dependsOn: ':TweetWallFX-Devoxx-2017-US:run')
+task ('runDevoxx2017FR', dependsOn: ':TweetWallFX-Devoxx-2017-FR:run')
 task ('runJavaOne', dependsOn: ':TweetWallFX-JavaOne:run')
 task ('runNetBeans', dependsOn: ':TweetWallFX-NetBeans:run')
